# LickDetectorGUI2

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mpr121_controller.cpp  mpr121_controller.h
